--- a/triviaStyle.css
+++ b/triviaStyle.css
@@ -1,6 +1,8 @@
 body {
+    background-color:rgb(29, 33, 13, 0.7);
     background-repeat: no-repeat;
     background-size: 100%;
+    background-attachment: fixed;
 }
 
 .title {
@@ -11,16 +13,79 @@ body {
     
 }
 
-#questionContainer{
-    background-color: rgb(29, 33, 13, 0.7);
+#start{
+    color: rgb(29, 33, 13);
     text-align: center;
-    color: #ffae42;
-    font-size:40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #ffae42;
+    font-size: 40px;
+    border: 3px  rgb(29, 33, 13) solid;
+    display: block; 
+    margin: 0 auto;
+    margin-top: 200px;
 }
 
-#answerContainer{
+
+#form{
     background-color: rgb(29, 33, 13, 0.7);
+    border: 5px solid #ffae42;
     text-align: center;
     color: #ffae42;
     font-size: 20px;
+    display: none;
+    max-width: 525px;
+    margin: 0 auto;
 }
+
+#submit {
+    color: rgb(29, 33, 13);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #ffae42;
+    font-size: 30px;
+}
+
+#timer {
+    color: rgb(29, 33, 13);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #ffae42;
+    font-size: 30px;
+    display: none;
+    max-width: 200px;
+}
+
+#lose {
+    margin-top: 200px;
+    max-width:525px;
+    margin: 0 auto;
+    display: none;
+
+}
+
+#win {
+    margin-top: 200px;
+    max-width: 525px;
+    margin: 0 auto;
+    display: none;
+}
+
+#tryAgain, #level2 {
+    color: rgb(29, 33, 13);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #ffae42;
+    font-size: 40px;
+    border: 3px  rgb(29, 33, 13) solid;
+    display: none; 
+    margin: 0 auto;
+    margin-top: 200px;
+}
+
+.text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:  yellow;
+    text-align: center;
+    font-size: 30px;
+}
+
